--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "recharts": "^2.10.4",
     "web-vitals": "^2.1.4"
   },
