--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/daysuwaa/chevron-figma",
+  "homepage": "http://daysuwaa.github.com/chevron-figma",
   "name": "chevron-figma",
   "version": "0.1.0",
   "private": true,
