--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "millify": "^6.1.0",
     "react": "^18.2.0",
-    "react-data-table-component": "^7.5.4",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "recharts": "^2.10.4",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
