--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "jest": "^29.7.0",
     "millify": "^6.1.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
@@ -19,7 +20,7 @@
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "recharts": "^2.10.4",
     "styled-components": "^5.3.11",
